Implemented random forest classifier, with good results

--- a/Burnout_Analysis.ipynb
+++ b/Burnout_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,35 +259,10 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Fitting Random Forest\n",
-    "##### Using Random Forest to predict burnout values"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Forest Model, Exhaustion\n",
-      "0.866533423138858\n",
-      "-0.09609723089410616\n",
-      "Forest Model, Cynicism\n",
-      "0.8450223170724394\n",
-      "-0.05996837937970745\n",
-      "Forest Model, Academic Efficacy\n",
-      "0.8269595093156245\n",
-      "-0.24133154205607465\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn import ensemble\n",
     "\n",
@@ -298,27 +273,64 @@
     "y_cy_val = val['mbi_cy']\n",
     "y_ea_val = val['mbi_ea']\n",
     "val_X = val[['id', 'age', 'year', 'sex', 'glang', 'part', 'job', 'stud_h', 'health', 'psyt']]\n",
-    "train_X = train[['id', 'age', 'year', 'sex', 'glang', 'part', 'job', 'stud_h', 'health', 'psyt']]\n",
+    "train_X = train[['id', 'age', 'year', 'sex', 'glang', 'part', 'job', 'stud_h', 'health', 'psyt']]\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Fitting Random Forest\n",
+    "##### Using Random Forest to predict burnout values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Forest Model - Classifier, Exhaustion\n",
+      "Training score: 1.0\n",
+      "Validation score: 0.7742663656884876\n",
+      "Forest Model - Classifier, Cynicism\n",
+      "Training score: 1.0\n",
+      "Validation score: 0.5169300225733634\n",
+      "Forest Model - Classifier, Academic Efficacy\n",
+      "Training score: 1.0\n",
+      "Validation score: 0.9616252821670429\n"
+     ]
+    }
+   ],
+   "source": [
+    "#using random forest classifier to predict burnout\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import accuracy_score\n",
     "\n",
-    "\n",
-    "print(\"Forest Model, Exhaustion\")\n",
-    "forest_model = ensemble.RandomForestRegressor(n_estimators=100, random_state=0, max_depth=20)\n",
+    "# Exhaustion\n",
+    "print(\"Forest Model - Classifier, Exhaustion\")\n",
+    "forest_model = RandomForestClassifier(n_estimators=100, random_state=0, max_depth=20)\n",
     "forest_model.fit(train_X, y_ex_train)\n",
-    "print(forest_model.score(train_X, y_ex_train))\n",
-    "print(forest_model.score(val_X, y_ex_val))\n",
+    "print(\"Training score:\", forest_model.score(train_X, y_ex_train))\n",
+    "print(\"Validation score:\", forest_model.score(val_X, y_ex_val))\n",
     "\n",
-    "print(\"Forest Model, Cynicism\")\n",
-    "forest_model = ensemble.RandomForestRegressor(n_estimators=100, random_state=0, max_depth=20)\n",
+    "# Cynicism\n",
+    "print(\"Forest Model - Classifier, Cynicism\")\n",
+    "forest_model = RandomForestClassifier(n_estimators=100, random_state=0, max_depth=20)\n",
     "forest_model.fit(train_X, y_cy_train)\n",
-    "print(forest_model.score(train_X, y_cy_train))\n",
-    "print(forest_model.score(val_X, y_cy_val))\n",
+    "print(\"Training score:\", forest_model.score(train_X, y_cy_train))\n",
+    "print(\"Validation score:\", forest_model.score(val_X, y_cy_val))\n",
     "\n",
-    "forest_model = ensemble.RandomForestRegressor(n_estimators=100, random_state=0, max_depth=20)\n",
+    "# Academic Efficacy\n",
+    "print(\"Forest Model - Classifier, Academic Efficacy\")\n",
+    "forest_model = RandomForestClassifier(n_estimators=100, random_state=0, max_depth=20)\n",
     "forest_model.fit(train_X, y_ea_train)\n",
-    "print(\"Forest Model, Academic Efficacy\")\n",
-    "print(forest_model.score(train_X, y_ea_train))\n",
-    "print(forest_model.score(val_X, y_ea_val))\n",
-    "\n"
+    "print(\"Training score:\", forest_model.score(train_X, y_ea_train))\n",
+    "print(\"Validation score:\", forest_model.score(val_X, y_ea_val))\n"
    ]
   },
   {
