added neural network

--- a/Burnout_Analysis.ipynb
+++ b/Burnout_Analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +233,12 @@
     "split = StratifiedShuffleSplit(n_splits=1, test_size=0.5, random_state=42)\n",
     "for train_index, val_index in split.split(data, data[\"mbi_ex\"]):\n",
     "    train = data.loc[train_index]\n",
-    "    val = data.loc[val_index]"
+    "    val = data.loc[val_index]\n",
+    "\n",
+    "\n",
+    "# Dataframe to hold results on performance of models\n",
+    "\n",
+    "results = pd.DataFrame(columns=['Model', 'Accuracy', 'Metric Predicted'])"
    ]
   },
   {
@@ -260,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -300,9 +305,33 @@
       "Forest Model - Classifier, Cynicism\n",
       "Training score: 1.0\n",
       "Validation score: 0.5169300225733634\n",
-      "Forest Model - Classifier, Academic Efficacy\n",
+      "Forest Model - Classifier, Academic Efficacy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\orion\\AppData\\Local\\Temp\\ipykernel_17420\\4084369169.py:11: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  results = results.append({'Model': 'Forest Model - Classifier, Exhaustion', 'Accuracy': forest_model.score(val_X, y_ex_val), 'Metric Predicted': 'Exhaustion'}, ignore_index=True)\n",
+      "C:\\Users\\orion\\AppData\\Local\\Temp\\ipykernel_17420\\4084369169.py:19: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  results = results.append({'Model': 'Forest Model - Classifier, Cynicism', 'Accuracy': forest_model.score(val_X, y_cy_val), 'Metric Predicted': 'Cynicism'}, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Training score: 1.0\n",
       "Validation score: 0.9616252821670429\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\orion\\AppData\\Local\\Temp\\ipykernel_17420\\4084369169.py:27: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  results = results.append({'Model': 'Forest Model - Classifier, Academic Efficacy', 'Accuracy': forest_model.score(val_X, y_ea_val), 'Metric Predicted': 'Academic Efficacy'}, ignore_index=True)\n"
      ]
     }
    ],
@@ -317,6 +346,7 @@
     "forest_model.fit(train_X, y_ex_train)\n",
     "print(\"Training score:\", forest_model.score(train_X, y_ex_train))\n",
     "print(\"Validation score:\", forest_model.score(val_X, y_ex_val))\n",
+    "results = results.append({'Model': 'Forest Model - Classifier, Exhaustion', 'Accuracy': forest_model.score(val_X, y_ex_val), 'Metric Predicted': 'Exhaustion'}, ignore_index=True)\n",
     "\n",
     "# Cynicism\n",
     "print(\"Forest Model - Classifier, Cynicism\")\n",
@@ -324,13 +354,15 @@
     "forest_model.fit(train_X, y_cy_train)\n",
     "print(\"Training score:\", forest_model.score(train_X, y_cy_train))\n",
     "print(\"Validation score:\", forest_model.score(val_X, y_cy_val))\n",
+    "results = results.append({'Model': 'Forest Model - Classifier, Cynicism', 'Accuracy': forest_model.score(val_X, y_cy_val), 'Metric Predicted': 'Cynicism'}, ignore_index=True)\n",
     "\n",
     "# Academic Efficacy\n",
     "print(\"Forest Model - Classifier, Academic Efficacy\")\n",
     "forest_model = RandomForestClassifier(n_estimators=100, random_state=0, max_depth=20)\n",
     "forest_model.fit(train_X, y_ea_train)\n",
     "print(\"Training score:\", forest_model.score(train_X, y_ea_train))\n",
-    "print(\"Validation score:\", forest_model.score(val_X, y_ea_val))\n"
+    "print(\"Validation score:\", forest_model.score(val_X, y_ea_val))\n",
+    "results = results.append({'Model': 'Forest Model - Classifier, Academic Efficacy', 'Accuracy': forest_model.score(val_X, y_ea_val), 'Metric Predicted': 'Academic Efficacy'}, ignore_index=True)\n"
    ]
   },
   {
@@ -346,7 +378,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -359,10 +393,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 198,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Neural Network - Exhaustion\n",
+      "14/14 [==============================] - 0s 881us/step - loss: 0.5792 - accuracy: 0.7675\n",
+      "Accuracy: 76.75\n",
+      "Neural Network - Cynicism\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\orion\\AppData\\Local\\Temp\\ipykernel_17420\\2000117926.py:15: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  results = results.append({'Model': 'Neural Network - Exhaustion', 'Accuracy': accuracy, 'Metric Predicted': 'Exhaustion'}, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14/14 [==============================] - 0s 1ms/step - loss: 0.7373 - accuracy: 0.4989\n",
+      "Accuracy: 49.89\n",
+      "Neural Network - Academic Efficacy\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\orion\\AppData\\Local\\Temp\\ipykernel_17420\\2000117926.py:26: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  results = results.append({'Model': 'Neural Network - Cynicism', 'Accuracy': accuracy, 'Metric Predicted': 'Cynicism'}, ignore_index=True)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14/14 [==============================] - 0s 1ms/step - loss: 0.2133 - accuracy: 0.9661\n",
+      "Accuracy: 96.61\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\orion\\AppData\\Local\\Temp\\ipykernel_17420\\2000117926.py:37: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  results = results.append({'Model': 'Neural Network - Academic Efficacy', 'Accuracy': accuracy, 'Metric Predicted': 'Academic Efficacy'}, ignore_index=True)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import tensorflow as tf\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import Dense\n",
+    "from tensorflow.keras.activations import linear, relu, sigmoid\n",
+    "\n",
+    "# Exhaustion\n",
+    "print(\"Neural Network - Exhaustion\")\n",
+    "model = Sequential()\n",
+    "model.add(Dense(10, input_dim=10, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.fit(train_X, y_ex_train, epochs=100, batch_size=10, verbose=0)\n",
+    "_, accuracy = model.evaluate(val_X, y_ex_val)\n",
+    "print('Accuracy: %.2f' % (accuracy*100))\n",
+    "results = results.append({'Model': 'Neural Network - Exhaustion', 'Accuracy': accuracy, 'Metric Predicted': 'Exhaustion'}, ignore_index=True)\n",
+    "\n",
+    "# Cynicism\n",
+    "print(\"Neural Network - Cynicism\")\n",
+    "model = Sequential()\n",
+    "model.add(Dense(10, input_dim=10, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.fit(train_X, y_cy_train, epochs=100, batch_size=10, verbose=0)\n",
+    "_, accuracy = model.evaluate(val_X, y_cy_val)\n",
+    "print('Accuracy: %.2f' % (accuracy*100))\n",
+    "results = results.append({'Model': 'Neural Network - Cynicism', 'Accuracy': accuracy, 'Metric Predicted': 'Cynicism'}, ignore_index=True)\n",
+    "\n",
+    "# Academic Efficacy\n",
+    "print(\"Neural Network - Academic Efficacy\")\n",
+    "model = Sequential()\n",
+    "model.add(Dense(10, input_dim=10, activation='relu'))\n",
+    "model.add(Dense(1, activation='sigmoid'))\n",
+    "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+    "model.fit(train_X, y_ea_train, epochs=100, batch_size=10, verbose=0)\n",
+    "_, accuracy = model.evaluate(val_X, y_ea_val)\n",
+    "print('Accuracy: %.2f' % (accuracy*100))\n",
+    "results = results.append({'Model': 'Neural Network - Academic Efficacy', 'Accuracy': accuracy, 'Metric Predicted': 'Academic Efficacy'}, ignore_index=True)\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
@@ -390,10 +515,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 199,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                          Model  Accuracy   Metric Predicted\n",
+      "0         Forest Model - Classifier, Exhaustion  0.774266         Exhaustion\n",
+      "1           Forest Model - Classifier, Cynicism  0.516930           Cynicism\n",
+      "2  Forest Model - Classifier, Academic Efficacy  0.961625  Academic Efficacy\n",
+      "3                   Neural Network - Exhaustion  0.767494         Exhaustion\n",
+      "4                     Neural Network - Cynicism  0.498871           Cynicism\n",
+      "5            Neural Network - Academic Efficacy  0.966140  Academic Efficacy\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(results)"
+   ]
   }
  ],
  "metadata": {
